--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,280 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+.container {
+  width: 1365px;
+  margin: 0px auto;
+  height: 5000px;
+}
+header {
+  width: 100%;
+  height: 75px;
+  background-color: #00353b;
+  display: flex;
+  align-items: center;
+  padding-left: 500px;
+  padding-bottom: 48px;
+  padding-top: 40px;
+}
+.header__box {
+  display: flex;
+  align-items: center;
+  padding-left: 190px;
+  gap: 24px;
+}
+header ul {
+  display: flex;
+  gap: 24px;
+  list-style: none;
+}
+header a {
+  text-decoration: none;
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #ffffff;
+  cursor: pointer;
+}
+header a:hover {
+  color: rgb(185, 92, 108);
+}
+header button {
+  padding: 10px 20px;
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  color: #1f2937;
+  cursor: pointer;
+}
+header button:hover {
+  color: blue;
+  background-color: rgb(201, 96, 114);
+}
+header img {
+  cursor: pointer;
+}
+header img:hover {
+  color: rgb(185, 92, 108);
+  background-color: rgb(185, 92, 108);
+}
+
+.nine {
+  position: absolute;
+  top: 300px;
+  left: 575px;
+}
+.cards {
+  width: 100%;
+  background-color: #00353b;
+  padding: 0px 80px;
+  height: 768px;
+  position: relative;
+}
+.card {
+  display: flex;
+}
+.steel1 {
+  margin-top: 163px;
+  margin-bottom: 30px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 56px;
+  line-height: 67px;
+  color: #ffffff;
+  width: 600px;
+  height: 135px;
+}
+.text1 {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  color: #ffffff;
+  width: 507px;
+  height: 54px;
+  margin-bottom: 39px;
+}
+.kitchen {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 50px;
+}
+.text2 {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  color: #ffffff;
+  background: #22a45a;
+  border: 1px solid #22a45a;
+  border-radius: 8px;
+  padding: 13px 28px;
+}
+.text3 {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  text-align: center;
+  color: #ffffff;
+  margin-bottom: 164px;
+  padding-bottom: 350px;
+}
+.nav {
+  background-color: #00353b;
+  position: relative;
+}
+.tugma {
+  margin-top: 64px;
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  text-align: center;
+  color: #1f2937;
+  background: #ffffff;
+  border-radius: 4px;
+  padding: 4px 8px;
+  border: none;
+}
+.steel5 {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 58px;
+  text-align: center;
+  color: #1f2937;
+
+  margin-top: 15px;
+  margin-bottom: 29px;
+}
+.text5 {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  text-align: center;
+  color: #374151;
+  padding-bottom: 39px;
+  width: 630px;
+  margin: auto;
+}
+.tugma2 {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  color: #ffffff;
+  background: #1f2937;
+  border: 1px solid #1f2937;
+  border-radius: 8px;
+  padding: 13px 25px;
+  margin-bottom: 20px;
+}
+.nav__page2 {
+  background: #fcd8ca;
+  border-radius: 24px;
+  border: 1px;
+  width: 1100px;
+  margin: 0px auto;
+  text-align: center;
+  position: absolute;
+  top: 180px;
+  left: 120px;
+}
+.nav2 {
+  width: 100%;
+  height: 880px;
+}
+.nav2__page {
+  padding-top: 160px;
+  display: flex;
+  gap: 120px;
+  margin: auto;
+  width: 1220px;
+}
+.steel6 {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 58px;
+  color: #1f2937;
+  width: 507px;
+}
+.text6 {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  color: #4b5563;
+  width: 534px;
+  margin-top: 28px;
+  margin-bottom: 39px;
+}
+.two {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.soft {
+  padding-top: 150px;
+}
+.nav {
+  width: 100%;
+  height: 720px;
+}
+.nav3__page {
+  display: flex;
+  gap: 100px;
+  margin: auto;
+  width: 1220px;
+  padding-top: 50px;
+}
+.steel7 {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 58px;
+  color: #1f2937;
+  width: 500px;
+}
+.text7 {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  color: #4b5563;
+  width: 540px;
+  margin-top: 28px;
+  margin-bottom: 39px;
+}
+.max {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.extra {
+  margin-top: 150px;
 }
